modif gestion des test pour fermer la JVM